# Lava

./: README.md  package.json
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  validator.rs
src/components/helpers/: Blinker.tsx  JsonView.tsx
src/components/layouts/: ClusterSelect.tsx  Footer.tsx  Header.tsx  Nav.tsx  NodeBlock.tsx  Search.tsx  Wallet.tsx  WorkspaceBlock.tsx
src/components/loader/: NewWorkspaceLoader.tsx
src/context/: main.tsx
src/libs/: index.ts  types.ts
src/pages/: StartPage.tsx
src/pages/accounts/: AccountsListPage.tsx  KeyItem.tsx
src/pages/contracts/: ContractListPage.tsx
src/pages/explorer/: AccountDetailsPage.tsx  BlockDetailsPage.tsx  BlockListPage.tsx  ExplorerPage.tsx  TransactionDetailsPage.tsx  TransactionListPage.tsx  TransactionsFilter.tsx
src/pages/faucet/: FaucetPage.tsx
src/pages/log/: LiveLog.tsx  LogPage.tsx  LogSearch.tsx
src/pages/programs/: AddProgramFromCluster.tsx  DeployProgram.tsx  ProgramDetailsPage.tsx  ProgramInstructions.tsx  ProgramItem.tsx  ProgramListPage.tsx  ProgramMainTab.tsx  ProgramOverview.tsx  ProgramTestTab.tsx  ProgramTransactions.tsx  StateAccounts.tsx  Terminal.tsx  TestInstructionAccountItem.tsx
src/pages/settings/: SettingsPage.tsx
src/pages/start/: CustomWorkspace.tsx  OpenWorkspace.tsx  QuickStart.tsx  StartPage.tsx
src/pages/wallet/: WalletPage.tsx
src/utils/: cli.ts  fetch.ts  helper.ts  hooks.ts
